gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test22227.d
version https://git-lfs.github.com/spec/v1
oid sha256:9938d36f55146d80bf8ac999a435642b9b17a7dc421626a5224c761bfc6b585a
size 354
